// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/CheckPresenter renders with all props 1`] = `
.emotion-3 {
  display: none;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  color: transparent;
  border: none;
  background-color: #808080;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 0;
  cursor: default;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-property: box-shadow,border;
  transition-property: box-shadow,border;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  opacity: 0.4;
  box-shadow: none;
  pointer-events: none;
}

.emotion-4 svg {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  pointer-events: none;
}

.emotion-4 svg * {
  fill: #ffffff;
}

.emotion-1 {
  display: block;
}

<span
  className="emotion-4"
>
  <span
    className="emotion-1"
  >
    <svg
      className="emotion-0"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.2 8.6l1.4-1.5 1.7 1.5 3.6-4 1.5 1.3-5 5.5-3.2-2.8z"
      />
    </svg>
  </span>
  <span
    className="emotion-3"
  >
    <svg
      className="emotion-0"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 7h8v2H4z"
      />
    </svg>
  </span>
</span>
`;

exports[`checkbox/presenters/CheckPresenter renders without props 1`] = `
.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  color: transparent;
  border: 1px solid rgba(128,128,128,0.5);
  background-color: transparent;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 0;
  cursor: default;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-property: box-shadow,border;
  transition-property: box-shadow,border;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-4 svg {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  pointer-events: none;
}

.emotion-4 svg * {
  fill: #ffffff;
}

.emotion-1 {
  display: none;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

<span
  className="emotion-4"
>
  <span
    className="emotion-1"
  >
    <svg
      className="emotion-0"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.2 8.6l1.4-1.5 1.7 1.5 3.6-4 1.5 1.3-5 5.5-3.2-2.8z"
      />
    </svg>
  </span>
  <span
    className="emotion-1"
  >
    <svg
      className="emotion-0"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 7h8v2H4z"
      />
    </svg>
  </span>
</span>
`;
